fix cropped letters

--- a/src/components/AppsItem/style.scss
+++ b/src/components/AppsItem/style.scss
@@ -32,7 +32,7 @@
 
   &__title {
     font-size: 24px;
-    line-height: 1;
+    line-height: 1.1;
     font-weight: 700;
     margin-bottom: 6px;
   }
